--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -131,5 +131,6 @@ nav:
   - 201-300:
     - 300. Longest Increasing Subsequence : 201-300/300. Longest Increasing Subsequence.md
   - 401-500:
+    - 417. Pacific Atlantic Water Flow: 401-500/417. Pacific Atlantic Water Flow.md
     - 424. Longest Repeating Character Replacement : 401-500/424. Longest Repeating Character Replacement.md  
   
